--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/anusontarangkul/webpack-tutorial#readme",
   "dependencies": {
+    "css-loader": "^6.4.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.59.1",
     "webpack-cli": "^4.9.1"
   }
