--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/anusontarangkul/webpack-tutorial#readme",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "css-loader": "^6.4.0",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^12.2.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.59.1",
     "webpack-cli": "^4.9.1"
