--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "css-loader": "^6.4.0",
+    "html-webpack-plugin": "^5.4.0",
     "node-sass": "^6.0.1",
     "sass-loader": "^12.2.0",
     "style-loader": "^3.3.1",
