--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Colt Steele webpack tutorial",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --config webpack.config.js"
+    "start": "webpack serve --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "repository": {
     "type": "git",
@@ -19,12 +20,17 @@
   "homepage": "https://github.com/anusontarangkul/webpack-tutorial#readme",
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.4.0",
+    "file-loader": "^6.2.0",
+    "html-loader": "^3.0.0",
     "html-webpack-plugin": "^5.4.0",
     "node-sass": "^6.0.1",
     "sass-loader": "^12.2.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.59.1",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.3.1",
+    "webpack-merge": "^5.8.0"
   }
 }
