--- a/package.json
+++ b/package.json
@@ -25,9 +25,14 @@
     "file-loader": "^6.2.0",
     "html-loader": "^3.0.0",
     "html-webpack-plugin": "^5.4.0",
+    "jquery": "^3.6.0",
+    "mini-css-extract-plugin": "^2.4.3",
     "node-sass": "^6.0.1",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "popper.js": "^1.16.1",
     "sass-loader": "^12.2.0",
     "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.2.4",
     "webpack": "^5.59.1",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.3.1",
